--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -36,6 +36,29 @@
 			{
 				 display: inline-block;
 			}
+
+
+				.toggleTarget
+				{
+					 display: none;
+					 opacity: 0;
+					 height: 0;
+					 overflow: hidden;
+					 transition: height 350ms ease-in-out, opacity 750ms ease-in-out;
+				}
+
+				.modalTarget
+				{
+					 display: none;
+				}
+
+				.toggleTarget.is-visible
+				{
+					display: block;
+					opacity: 1;
+					height: auto;
+
+				}
     }
     section h2 {
       position: absolute;
