--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -27,19 +27,17 @@
       font-style: normal;
     }
 
-
-
-
     p.description
     {
        font-size: 14px;
-       max-width: 650px;
+       //max-width: 650px;
        margin-left: 10px;
        margin: 15px 0;
     }
 
     nav {
-      margin: 45px auto;
+			margin: auto;
+      margin-top: 45px;
       width: 80%;
 			.button {
 				margin-right: 8px;
@@ -72,6 +70,21 @@
     .hidden {
       display: none !important;
     }
+
+		.dashicons.spin {
+   		animation: dashicons-spin 1s infinite;
+   		animation-timing-function: linear;
+	}
+
+	@keyframes dashicons-spin {
+	   0% {
+	      transform: rotate( 0deg );
+	   }
+	   100% {
+	      transform: rotate( 360deg );
+	   }
+	}
+
 
 		.bulk-modal
 		{
@@ -141,7 +154,7 @@
            right: 0;
            top: 0;
            bottom: 0;
-           background: rgba(1,1,1,0.1);
+           background: #fff;
            transition: opacity 1s linear;
            z-index: -1;
            opacity: 0;
@@ -151,11 +164,14 @@
            border-radius: 10px;
            margin: 0 auto;
 
+
            &[data-status="loading"]
            {
              z-index: 100;
              visibility: visible;
-             opacity: 1;
+             opacity: 0.9;
+						 position: absolute;
+						 width: 100%;
            }
 
           .loader {
@@ -181,8 +197,9 @@
         z-index: 0;
         visibility: hidden;
         opacity: 0;
-        transition: opacity 1s linear;
+        transition: opacity 500ms ease-in;
         margin: 15px 0;
+				padding-bottom: 35px;
         p {
           margin-left: 15px;
         }
@@ -251,7 +268,7 @@
        padding: 26px 0;
        text-align: center;
        z-index: 10;
-       border-radius: 10px;
+       border-radius: 3px;
        cursor: pointer;
        transition: all 900ms;
        &:hover {
@@ -486,13 +503,16 @@
       .load.wrapper, .interface.wrapper
       {
          opacity: 0;
-         transition: all 1s ease-in;
+				 height: 0;
+         transition: opacity 100ms ease-in;
 
       }
       &[data-status="loading"]
       {
          .load.wrapper {
            opacity: 1;
+					 height: auto;
+					 padding-bottom: 45px;
          }
       }
       &[data-status="loaded"]
@@ -500,6 +520,7 @@
         .interface.wrapper
         {
            opacity: 1;
+					 height: auto;
         }
       }
       .load.wrapper
@@ -796,6 +817,7 @@
         > div > span {
             display: table-cell;
             padding: 16px;
+						width: 25%;
         }
         .heading {
            background: #F6F9FF;
@@ -842,7 +864,7 @@
         }
       }
 
-      .image-preview {
+      .image-preview-section {
          background: #F6F9FF;
          border: 1px solid #DFEAFF;
          width: 80%;
@@ -850,18 +872,22 @@
         .image-preview-line
         {
            display: flex;
-           width: 60%;
+           width: 90%;
            justify-content: space-between;
            align-items: center;
            margin: 15px auto;
         //   max-width: 300px;
 
+					[data-result="filename"]
+					{
+						overflow: hidden;
+					}
 
            .opt-circle-image {
-               width: 40px;
-               height: 40px;
+               width: 55px;
+               height: 55px;
                float: right;
-               margin-right: 35px;
+               //margin-right: 35px;
                .trail {
                  stroke: #ddd;
                }
@@ -883,13 +909,67 @@
          }
          .preview-wrapper
          {
-           display: flex;
+
+         //  display: flex;
+					 width: 100%;
+				  overflow: hidden;
         //   width: 60%;
-           justify-content: center;
+         //  justify-content: flex-start;
            margin: 25px 0 40px 0;
-           .image-source, .image-result
+
+					 .slide-mask {
+						 // width: 100%;
+						//	overflow: hidden;
+						//	height: 500px;
+							flex-wrap: nowrap;
+							display: flex;
+							justify-content: flex-start;
+
+					 }
+
+					 .preview-image
+					 {
+						 transition: 1s all linear;
+ 						 display: flex;
+						 justify-content: center;
+						 flex-shrink: 0;
+						 flex-grow: 0;
+						 width: 100%;
+					 }
+					 .current.preview-image
+					 {
+						 	opacity: 1;
+							//flex-basis: 100%;
+					 }
+					 .slideLeft
+					 {
+						 // transform: translateX(-100%);
+					//	 margin-left:
+					 }
+
+					 .new.preview-image
+					 {
+						  //transform: translateX(100%);
+						//	opacity: 0;
+						//	margin-right: 999px;
+						//	flex-basis: 0;
+							//transform: translateX(100%);
+					 }
+
+					 .old.preview-image
+					 {
+						 // opacity: 1;
+						 display: none;
+						//	margin-left: -999px;
+						//	transform: translateX(-100%);
+						//	flex-basis: 0;
+			 			}
+
+
+
+           .image
            {
-              max-width: 400px;
+              max-width: 45%;
               max-height: 400px;
             //  border: 1px solid #DFEAFF;
               overflow: hidden;
@@ -899,6 +979,7 @@
               //  max-width: 100%;
               //  max-height: 100%;
                 width: 100%;
+								height: auto;
 								object-fit: cover;
               //  transition: opacity 1s eas
                 &[src=""]
@@ -916,11 +997,11 @@
                 padding: 4px;
               }
            }
-           .image-source
+           .image.source
            {
               margin-right: 8px;
            }
-           .image-result
+           .image.result,
            {
              margin-left: 8px;
            }
@@ -929,7 +1010,7 @@
 
       nav {
           width: 80%;
-          margin: 35px auto;
+          margin-top: 35px;
 
 
 
