Alpha 78 - Fix for Wpml / Polylang - Other fixes / css

--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -290,7 +290,7 @@ body.debug-model-active {
 
 .switch_button {
   line-height: 12px;
-  margin: 10px -5px;
+  margin: 2px -5px 10px -5px;
   display: inline-block;
 }
 .switch_button label {
