--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -17,7 +17,7 @@
 {
 //	margin-left: -5px;
 	line-height: 12px;
-	margin: 10px -5px ;
+	margin: 2px -5px 10px -5px ;
 	display: inline-block;
 
 	label{
